# vec-span-demo

./: CMakeLists.txt  README.md  moving.cpp  pb-main.cpp  pod_vector.cpp  poly_span.cpp  ranges-bench.cpp  ranges.cpp  small_vector.cpp  span.cpp  static_vector.cpp  std-array.cpp  stride_span.cpp
